plugins {
    id'java'
    id'application'
    id'com.github.johnrengelman.shadow' version '2.0.4'
}

mainClassName = 'me.melijn.jda.Melijn'
version = '1.1'
sourceCompatibility = 10.0

repositories {
    jcenter()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}

dependencies {
    compile 'com.sedmelluq:jda-nas:1.0.6'
    compile 'net.dv8tion:JDA:3.7.1_395'
    compile 'com.sedmelluq:lavaplayer:1.3.7'
    compile 'me.duncte123:weebJava:2.0.1'
    compile 'mysql:mysql-connector-java:8.0.12'
    compile 'com.github.natanbc:lavadsp:0.4'
    compile 'com.github.DiscordBotList:DBL-Java-Library:d0ca7283e55def0f828ee33c0c2bf86266223854'
    compile 'se.michaelthelin.spotify:spotify-web-api-java:2.0.4'
    compile "org.kohsuke:groovy-sandbox:1.6"
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.1'
}
compileJava.options.encoding = 'UTF-8'
